# stack

./: .gitignore  CMakeLists.txt  main.cpp
akinator/: CMakeLists.txt  akinator-tests.cpp  akinator.cpp  akinator.h  akinator.tree  main.cpp
ansi-colors/: CMakeLists.txt  ansi-colors.h
binary-tree/: CMakeLists.txt  binary-tree-tests.cpp  binary-tree.h
crypto/: CMakeLists.txt  crypto.h  sha256.cpp
differentiator/: CMakeLists.txt  differentiator-tests.cpp  differentiator.cpp
graphviz/: CMakeLists.txt  graphviz-tests.cpp  graphviz.cpp  graphviz.h
hash-set/: CMakeLists.txt  hash-set-tests.cpp  hash-set.h
hash-table/: CMakeLists.txt  default-hash-functions.cpp  default-hash-functions.h  hash-table-tests.cpp  hash-table.h  singly_linked_multilist.h
lexer/: CMakeLists.txt  aho.h  dfs-visualizer-tests.cpp  dfs-visualizer.cpp  dfs-visualizer.h  lexer-tests.cpp
linked-list/: CMakeLists.txt  linked-list-tests.cpp  linked-list.h
macro-utils/: CMakeLists.txt  macro-utils.h
printf-asm/: CMakeLists.txt  call-printf-from-c.cpp  printf-asm-tests.cpp  printf-asm.h  printf-asm.s  stdlib.s
processor/: CMakeLists.txt  commands.h  commands_defenition.h  registers.h  registers_defenitions.h
processor/asm/: CMakeLists.txt  assembler-tests.cpp  assembler.cpp  assembler.h  lexer-tests.cpp  lexer.cpp  lexer.h
processor/cpu/: CMakeLists.txt  cpu.h
processor/disasm/: CMakeLists.txt
processor/textlib/: CMakeLists.txt  test-file  textlib-test.cpp  textlib.cpp  textlib.h
protected-stack/: CMakeLists.txt  config.h  protected-stack-tests.cpp  protected-stack.cpp  protected-stack.h
pseudographics/: CMakeLists.txt  ascii-tables.cpp  ascii-tables.h
safe-alloc/: CMakeLists.txt  safe-alloc.h
simple-stack/: CMakeLists.txt  simple-stack.h
test-framework/: CMakeLists.txt  simple-stack.h  test-framework.h
textlib/: CMakeLists.txt  printf-utils.cpp  printf-utils.h  textlib.cpp  textlib.h
trace/: CMakeLists.txt  stack-trace-example  trace-tests.cpp  trace.cpp  trace.h
